# ai-fundamentals-course

./: README.md  ai-fundamentals-fine-tuning.ipynb  ai-fundamentals.ipynb  newsuk-rfc.txt  pyproject.toml
