[tool.poetry]
name = "ai-fundamentals-course"
version = "0.1.0"
description = ""
authors = ["hmgibson23 <gibsonhugo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
torch = "^2.4.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
