[tool.poetry]
name = "ai-fundamentals-course"
version = "0.1.0"
description = ""
authors = ["hmgibson23 <gibsonhugo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
matplotlib = "^3.9.2"
llama-index = "^0.11.14"
llama-index-embeddings-instructor = "^0.2.1"
transformers = {extras = ["torch"], version = "^4.45.1"}
jupyter = "^1.1.1"
dspy = "^2.5.3"
boto3 = "^1.35.31"
pandas = "^2.2.3"
datasets = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
